# whisper-subtitles

./: .gitattributes  .gitignore  .timestamps.json  LICENSE  README.md  ___Cheat-Sheet.txt  ___cheatsheet.txt  ___install.txt  ___start.txt  __licenses.txt  __mypy.py  __outdated.txt  __package_tree.txt  __pyright.py  __tree#defekt.txt  __tree.txt  _audio.py  _basedpyright.py  _combine_srt.py  _final_srt_vtt.py  _mypy.py  _pyright.py  _reset.py  _test_load_spacy.py  _test_prefs.py  _test_spacy.py  _test_spelling.py  _test_stanza.py  _update_excel.py  log.txt  main.py  notes.txt  pyproject.toml  requirements.txt  ruff.toml  tmp.json
.type-check-result/: mypy-src.txt  pyright-src.txt
_dictionary/: Dictionary-DATEV.xlsx  Dictionary-Update-sz.xlsx  Dictionary-Update-v2.xlsx  dictionaryUsedSorted-sz.json  dictionaryUsedSorted-v2.json  dictionaryUsedSorted-v3.json
_hunspell/: InfoSyntax.xlsx
_hunspell/_de-DE-org/: igerman98-20161207.7z  url.txt
_hunspell/de-DE/: PreCheck_de-DE.xlsx  de-DE.aff
_hunspell/de-org/: url.txt
_infos/: _licenses.txt  info-spacy.txt  requirements-spacy-3.7.in  requirements-spacy-3.8.in
_prefs/: projects.yaml  projects_all.yaml
_spaCy_trace/: de_core_news_lg-3.7.0.txt  de_core_news_lg-3.8.0.txt  de_dep_news_trf-3.7.2.txt  de_dep_news_trf-3.8.0.txt
settings/: base.yaml  format_sentence.yaml  hallucination.yaml  hunspell.yaml  projects.yaml  projects_all.yaml  projects_combine.yaml  spacy.yaml  whisper.yaml
src/: _audio.py  _combine_srt.py  _final_srt_vtt.py  _reset.py  _test_load_spacy.py  _test_prefs.py  _test_spacy.py  _test_spelling.py  _test_stanza.py  _update_excel.py  audio.py  combine_srt.py  final_srt_vtt.py  main.py  reset.py  spacy.py  update_excel.py  whisper.py  whisper_faster.py  whisper_timestamped.py
src/extras/: _test_prefs.py  compare.py  metadata_mutagen.py  rename_1.py  rename_2.py
src/faster_whisper/: feature_extractor.py  tokenizer.py  transcribe-new.py  transcribe.py  vad.py
src/faster_whisper_custom/: __init__.py  transcribe.py  vad.py
src/helper/: analyse.py  captions.py  excel#.py  excel.py  excel_read.py  excel_update.py  excel_write.py  log.py  spelling.py  whisper_faster_util.py  whisper_util.py
src/main/: spacy.py  whisper.py  whisper_faster.py  whisper_timestamped.py
src/primary/: spacy.py  whisper.py  whisper_faster.py  whisper_timestamped.py
src/utils/: audio.py  decorator.py  excel.py  file.py  files.py  format.py  globals.py  log.py  metadata.py  metadata_mutagen.py  prefs.py  text.py  trace.py  util.py  utilities.py  utils.py  xml.py  zip.py
