[project]
name = "whisper-subtitles"
version = "0.1.0"
description = "Add your description here"
authors = [
  { name="Jürgen Schoenemeyer", email="js007@web.de" },
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numba>=0.60.0",
    "spacy-curated-transformers<1",
    "spacy<3.9",
    "spylls>=0.1.7",
    "torch<2.5",
    "openai-whisper>=20240930",
    "whisper-timestamped>=1.15.8",
    "tzdata>=2024.2",
    "pyyaml>=6.0.2",
    "arrow>=1.3.0",
    "openpyxl>=3.1.5",
    "webvtt-py>=0.5.1",
    "pymediainfo>=6.1.0",
    "av>=13.1.0",
    "ctranslate2<5",
    "huggingface-hub>=0.26.2",
    "tokenizers<1",
    "onnxruntime<2",
]

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "types-openpyxl>=3.1.5.20241225",
    "types-pyyaml>=6.0.12.20241230",
    "types-requests>=2.32.0.20241016",
]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "faster_whisper.*"
ignore_errors = true
ignore_missing_imports = true

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
]
pythonVersion = "3.12"
