[project]
name = "whisper-subtitles"
version = "0.1.0"
description = "..."
authors = [
  { name="Jürgen Schoenemeyer", email="js007@web.de" },
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numba>=0.60.0",
    "spacy-curated-transformers<1",
    "spacy<3.9",
    "spylls>=0.1.7",
    "torch<2.5",
    "openai-whisper>=20240930",
    "whisper-timestamped>=1.15.8",
    "tzdata>=2024.2",
    "pyyaml>=6.0.2",
    "arrow>=1.3.0",
    "openpyxl>=3.1.5",
    "webvtt-py>=0.5.1",
    "av>=13.1.0",
    "ctranslate2<5",
    "huggingface-hub>=0.26.2",
    "tokenizers<1",
    "onnxruntime<2",
    "python-calamine>=0.3.1",
    "xlsxwriter>=3.2.0",
    "rapidfuzz>=3.11.0",
    "jaro-winkler>=2.0.3",
    "pymediainfo>=7.0.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "types-openpyxl>=3.1.5.20241225",
    "types-pyyaml>=6.0.12.20241230",
    "types-requests>=2.32.0.20241016",
]

[tool.basedpyright]
deprecateTypingAliases =  false
reportAny = false
reportExplicitAny = false
reportImplicitRelativeImport = false
reportMissingTypeStubs = false
reportUnusedCallResult = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnusedParameter = false
